--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -2,12 +2,16 @@
 	<div class="row">
     <aside class="span4">
       <section>
-				<%= render 'shared/user_info' %> 
-	  	</section>
+		<%= render 'shared/user_info' %> 
+	  </section>
 
-			<section>
-				<%= render 'shared/micropost_form' %> 
-			</section>
+	  <section>
+		<%= render 'shared/stats' %> 
+	  </section>
+
+		<section>
+		  <%= render 'shared/micropost_form' %> 
+		</section>
     </aside>
 
     <div class="span8">
